proc-macro-workshop/builder/tests/08-unrecognized-attribute.stderr
error: expected `builder(each = "...")`
  --> tests/08-unrecognized-attribute.rs:22:14
   |
22 |     #[builder(eac = "arg")]
   |              ^^^^^^^^^^^^^
